--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,11 +59,21 @@
 
 <script>
   window.addEventListener('keydown', function(e) {
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     if(!audio) return;
     audio.currentTime = 0;
     audio.play();
+    key.classList.add('playing');
   });
+
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return; //skip it if it's not a transform
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach( key => key.addEventListener('transitionend', removeTransition));
 </script>
 
 
