Add solution for #3 sortexercise

--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -42,6 +42,7 @@
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    console.table(inventors.sort((a, b) => a.year > b.year));
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
