--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -53,6 +53,7 @@
     console.log(totalYears);
 
     // 5. Sort the inventors by years lived
+    console.table(inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year))); 
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
