Add solution for #6th exercise

--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -57,7 +57,10 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const list = Array.from(document.querySelector('.mw-category a'));
+    const de = list
+      .map(link => link.innerHTML)
+      .filter(streetName => streetName.includes(' de '));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
