Add solution for #7 sort exercise

--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -57,13 +57,18 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    const list = Array.from(document.querySelector('.mw-category a'));
-    const de = list
-      .map(link => link.innerHTML)
-      .filter(streetName => streetName.includes(' de '));
+    // const list = Array.from(document.querySelector('.mw-category a'));
+    // const de = list
+    //   .map(link => link.innerHTML)
+    //   .filter(streetName => streetName.includes(' de '));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    console.table(people.sort((a, b) => {
+      const [aLast, aFirst] = a.split(', ');
+      const [bLast, bFirst] = b.split(', ');
+      return aLast > bLast;
+    }));
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
