--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -34,6 +35,10 @@
       color: white;
       text-align: center;
       align-items: center;
+      flex: 1;
+      display: flex;
+      flex-direction: column; 
+      justify-content: center;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
@@ -56,6 +61,11 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      border: 2px solid red;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .panel p {
