--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -23,6 +23,15 @@ fetch(endpoint)
   .then(input => input.json())
   .then(data => cities.push(...data))
 
+function findMatches(wordToMatch, cities) {
+  return cities.filter(place => {
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex)
+  })
+}
+
+findMatches('bos', cities);
+
 </script>
 </body>
 </html>
