Add functionality to display search results

--- a/06 - Type Ahead/index.html
+++ b/06 - Type Ahead/index.html
@@ -30,7 +30,24 @@ function findMatches(wordToMatch, cities) {
   })
 }
 
-findMatches('bos', cities);
+function displayMatches() {
+  const matchArray = findMatches(this.value, cities);
+  const html = matchArray.map(place => {
+    return `
+      <li>
+        <span class="name">${place.city}, ${place.state}</span>
+        <span class="name">${place.population}</span>
+      </li>
+    `;
+  }).join('');
+  suggestions.innerHTML = html;
+};
+
+const searchInput = document.querySelector('.search')
+const suggestions = document.querySelector('.suggestions')
+
+searchInput.addEventListener('submit', displayMatches);
+searchInput.addEventListener('keyup',  displayMatches);
 
 </script>
 </body>
