--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,14 +27,17 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     
-    const isAdult = people.some(person => {
-      const currentYear = (new Date()).getFullYear();
-      return currentYear - person.year >= 19
-    }) 
+    const currentYear = (new Date()).getFullYear();
+    
+    const isAdult = people.some(person => currentYear - person.year >= 19);
 
     console.log({isAdult});
 
     // Array.prototype.every() // is everyone 19 or older?
+
+    const allAdults = people.every(person => currentYear - person.year >= 19);
+
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
