--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -19,10 +19,12 @@
   let isDrawing = false; 
   let lastX = 0;
   let lastY = 0;
+  let hue = 0;
   
   function draw(e) {
     if(!isDrawing) return; //stop the function from running when they are not moused down
     console.log(e);
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
     ctx.beginPath();
     // start from
     ctx.moveTo(lastX, lastY);
@@ -30,6 +32,11 @@
     ctx.lineTo(e.offsetX, e.offsetY);
     ctx.stroke();
     [lastX, lastY] = [e.offsetX, e.offsetY];
+    
+    hue++;
+    if (hue > 360) {
+      hue = 0;
+    }
   }
 
   canvas.addEventListener('mousemove', draw);
