Add functionality to increment and decrement linewidth

--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -14,12 +14,12 @@
   ctx.strokeStyle = '#BADA55';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
-  ctx.lineWidth = 10;
 
   let isDrawing = false; 
   let lastX = 0;
   let lastY = 0;
   let hue = 0;
+  let direction = true;
   
   function draw(e) {
     if(!isDrawing) return; //stop the function from running when they are not moused down
@@ -34,8 +34,16 @@
     [lastX, lastY] = [e.offsetX, e.offsetY];
     
     hue++;
-    if (hue > 360) {
+    if (hue >= 360) {
       hue = 0;
+    }
+    if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+      direction = !direction;
+    }
+    if (direction) {
+      ctx.lineWidth++;
+    } else {
+      ctx.lineWidth--;
     }
   }
 
