--- a/10 - Hold Shift and Check Checkboxes/index.html
+++ b/10 - Hold Shift and Check Checkboxes/index.html
@@ -96,6 +96,23 @@
   </div>
 
 <script>
+  /* Pseudo code */
+  
+  // choose DOM element with class='inbox'
+  // spread all children of inbox into an empty object with an id key
+  // add matching id's to each input element under their parent inbox (use .inbox:nth-child selector)
+  // add eventListener for 'click' on all input elements
+  // add eventListener for 'keydown' for the 'Shift' key
+  // define a boolean variable for isStrikeThrough
+  // write a function 
+  //   - to calculate the total children / elements under inbox / elements inside object
+  //   - to check the id of the clicked input element
+  //   - to check if the shift key is pressed
+  //   - to check the id of the second clicked input element
+  //   - calculate the elements in between those two id's 
+  //   - check if the ones in between are already strike-through
+  //   - determine the ones in between as strike-through if not already or otherway around
+
 </script>
 </body>
 </html>
