Style index.html to have a dark preview

--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -63,13 +63,15 @@
   <style>
     html {
       box-sizing: border-box;
-      background: #ffc600;
+      /* background: #ffc600; */
+      background: #444;
       font-family: 'helvetica neue';
       font-size: 20px;
       font-weight: 200;
     }
     
     body {
+      color: 333;
       margin: 0;
     }
     
@@ -84,7 +86,8 @@
     .site-wrap {
       max-width: 700px;
       margin: 100px auto;
-      background: white;
+      /* background: white; */
+      background: #999;
       padding: 40px;
       text-align: justify;
     }
