Revert the style to original colors

--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -83,15 +83,13 @@
   <style>
     html {
       box-sizing: border-box;
-      /* background: #ffc600; */
-      background: #444;
+      background: #ffc600;
       font-family: 'helvetica neue';
       font-size: 20px;
       font-weight: 200;
     }
     
     body {
-      color: 333;
       margin: 0;
     }
     
@@ -106,8 +104,7 @@
     .site-wrap {
       max-width: 700px;
       margin: 100px auto;
-      /* background: white; */
-      background: #999;
+      background: white;
       padding: 40px;
       text-align: justify;
     }
