Add localStorage.setItem to see the same list with checked status on page reload

--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -60,6 +60,8 @@
     const el = e.target;
     const index = el.dataset.index;
     items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
   }
 
   addItems.addEventListener('submit', addItem);
