--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -23,6 +23,11 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <div>
+      <button id="check">Check all</button>
+      <button id="uncheck">Uncheck all</button>
+      <button id="delete">Delete list</button>
+    </div>
   </div>
 
 <script>
