--- a/15 - LocalStorage/index.html
+++ b/15 - LocalStorage/index.html
@@ -24,9 +24,9 @@
       <input type="submit" value="+ Add Item">
     </form>
     <div>
-      <button id="check">Check all</button>
-      <button id="uncheck">Uncheck all</button>
-      <button id="delete">Delete list</button>
+      <button id="check-all">Check all</button>
+      <button id="uncheck-all">Uncheck all</button>
+      <button id="delete-all">Delete list</button>
     </div>
   </div>
 
@@ -34,6 +34,9 @@
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
   const items = JSON.parse(localStorage.getItem('items')) || [];
+  const checkAllButton = document.querySelector('#check-all');
+  const uncheckAllButton = document.querySelector('#uncheck-all');
+  const deleteAllButton = document.querySelector('#delete-all');
 
   function addItem(e) {
     e.preventDefault();
@@ -60,6 +63,10 @@
     }).join('');
   }
 
+  function depleteList(plates = [], platesList) {
+    platesList.innerHTML = `<ul></ul>`;
+  }
+
   function toggleDone(e) {
     if (!e.target.matches('input')) return; //skip this unless it's an input
     const el = e.target;
@@ -69,8 +76,15 @@
     populateList(items, itemsList);
   }
 
+  function deleteAll() {
+    items.length = 0;
+    depleteList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+  };
+
   addItems.addEventListener('submit', addItem);
   itemsList.addEventListener('click', toggleDone);
+  deleteAllButton.addEventListener('click', deleteAll);
 
   populateList(items, itemsList);
 
