Add localStorage.setItem to checkAll function

--- a/15 - LocalStorage/index.html
+++ b/15 - LocalStorage/index.html
@@ -95,6 +95,7 @@
 
   function handleCheckAll() {
     checkAll(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
   }
 
   addItems.addEventListener('submit', addItem);
