Add functionality to have inital dynamic shadow for text block

--- a/16 - Mouse Move Shadow/index.html
+++ b/16 - Mouse Move Shadow/index.html
@@ -35,6 +35,20 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const text = hero.querySelector('h1');
+
+  function shadow(e) {
+    console.log(e.offsetX, e.offsetY);
+    x = e.offsetX;
+    y = e.offsetY;
+  
+    text.style.textShadow = `
+      ${x}px ${y}px rgba(255, 255, 0, 0.7)
+    `;
+  }
+
+  hero.addEventListener('mousemove', shadow);
 </script>
 </body>
 </html>
