--- a/16 - Mouse Move Shadow/index.html
+++ b/16 - Mouse Move Shadow/index.html
@@ -37,12 +37,22 @@
 <script>
   const hero = document.querySelector('.hero');
   const text = hero.querySelector('h1');
+  const walk = 200; //200px
 
   function shadow(e) {
+    const { offsetWidth: width, offsetHeight: height } = hero;
     let { offsetX: x, offsetY: y } = e;
+
+    if (this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / height * walk) - (walk / 2));
   
     text.style.textShadow = `
-      ${x}px ${y}px rgba(255, 255, 0, 0.7)
+      ${xWalk}px ${yWalk}px rgba(255, 255, 0, 0.7)
     `;
   }
 
